# prolog-backend

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
containers/: compose.test.yaml  compose.yaml
src/prolog_backend/: app.py  serve.py
src/prolog_backend/api/: __init__.py  base.py  middlewares.py
src/prolog_backend/api/guards/: user.py
src/prolog_backend/api/v1/: __init__.py  auth.py
src/prolog_backend/cli/: __main__.py  database.py  tenant.py
src/prolog_backend/config/: alembic.py  api.py  app.py  cors.py  database.py  directories.py  jwt.py  redis.py  server.py
src/prolog_backend/dependencies/: database.py
src/prolog_backend/exceptions/: auth.py  base.py  user.py
src/prolog_backend/migrations/: utils.py
src/prolog_backend/migrations/shared/: env.py
src/prolog_backend/migrations/shared/versions/: 0001_tenant_user_models.py
src/prolog_backend/migrations/tenant/: env.py
src/prolog_backend/models/: __init__.py  base.py  tenant.py  user.py
src/prolog_backend/repositories/: base.py  database.py  memory.py  tenant.py  user.py
src/prolog_backend/schemas/: auth.py  base.py  token.py  user.py
src/prolog_backend/services/: auth.py  base.py
src/prolog_backend/utils/: hasher.py  sqlalchemy.py  unit_of_work.py
tests/: config.py  conftest.py
tests/api/: test_auth.py
