[project]
name = "prolog-backend"
version = "0.1.0"
description = "Backend for prolog"
dependencies = [
    "litestar>=2.10.0",
    "uvicorn>=0.30.5",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.31",
    "psycopg[binary]>=3.2.1",
    "uuid6>=2024.7.10",
    "alembic>=1.13.2",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.8.0",
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-dotenv>=0.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prolog_backend"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I"]

[tool.rye.scripts]
cli = {cmd = "python src/prolog_backend/cli/__main__.py"}
